--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<html lang='ja'>
+<html lang="ja">
   <head>
-    <meta charset='UTF-8'>
+    <meta charset="UTF-8" />
     <title>React app</title>
+    <link rel="stylesheet" href="./src/index.css" />
   </head>
   <body>
-    <div id='root'></div>
+    <div id="root"></div>
     <script type="module" src="./src/index.tsx"></script>
   </body>
 </html>
